chore' add storybook

--- a/packages/package.json
+++ b/packages/package.json
@@ -21,10 +21,13 @@
     "@storybook/addon-essentials": "^8.1.11",
     "@storybook/addon-interactions": "^8.1.11",
     "@storybook/addon-links": "^8.1.11",
+    "@storybook/addon-styling-webpack": "^1.0.0",
     "@storybook/blocks": "^8.1.11",
     "@storybook/testing-library": "^0.2.2",
+    "autoprefixer": "^10.4.19",
     "babel-preset-solid": "^1.8.9",
     "jsdom": "^23.2.0",
+    "postcss": "^8.4.38",
     "solid-devtools": "^0.29.2",
     "solid-dom-testing": "^0.0.3",
     "solid-register": "^0.2.5",
