Chore add storybook (#3)
* chore: set up storybook

* chore: add empty directory

* chore: add comment

* chore' add storybook

* chore: remove not use

* chore: fix lint

* chore: fix lint

* fix: typo

--- a/packages/package.json
+++ b/packages/package.json
@@ -7,17 +7,35 @@
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
-    "test": "uvu -r solid-register"
+    "test": "uvu -r solid-register",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
+    "lint": "npx @biomejs/biome lint ./src",
+    "format": "npx @biomejs/biome format --write ./src"
   },
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.23.7",
+    "@biomejs/biome": "1.8.3",
+    "@chromatic-com/storybook": "^1.6.0",
+    "@storybook/addon-essentials": "^8.1.11",
+    "@storybook/addon-interactions": "^8.1.11",
+    "@storybook/addon-links": "^8.1.11",
+    "@storybook/addon-styling-webpack": "^1.0.0",
+    "@storybook/blocks": "^8.1.11",
+    "@storybook/testing-library": "^0.2.2",
+    "autoprefixer": "^10.4.19",
     "babel-preset-solid": "^1.8.9",
     "jsdom": "^23.2.0",
+    "postcss": "^8.4.38",
     "solid-devtools": "^0.29.2",
     "solid-dom-testing": "^0.0.3",
     "solid-register": "^0.2.5",
     "solid-testing-library": "^0.5.1",
+    "storybook": "^8.1.11",
+    "storybook-solidjs": "^1.0.0-beta.2",
+    "storybook-solidjs-vite": "^1.0.0-beta.2",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5.3.3",
     "uvu": "^0.5.6",
     "vite": "^5.0.11",
@@ -25,5 +43,6 @@
   },
   "dependencies": {
     "solid-js": "^1.8.11"
-  }
+  },
+  "packageManager": "pnpm@9.1.4+sha512.9df9cf27c91715646c7d675d1c9c8e41f6fce88246f1318c1aa6a1ed1aeb3c4f032fcdf4ba63cc69c4fe6d634279176b5358727d8f2cc1e65b65f43ce2f8bfb0"
 }
